# j2fam

./: .gitmodules  CMakeLists.txt  Makefile  build_loop
.github/workflows/: ci.yml
boards/ulx3s/: synth.ys  toplevel.sv  ulx3s_v20.lpf
cmake/: OssCad.cmake  Trellis.cmake  Verible.cmake  cc65.cmake  gtest.cmake
scripts/: oss-cad-cmd.sh  synth.ys.in  verible-format-check.sh
src/: cpu.sv
test/: test_cpu.cpp
test/cpu/: alu_tests.cpp  basic_tests.cpp  bus_emulator.cpp  bus_emulator.hpp  fixture.cpp  fixture.hpp  flags.hpp
test/lib/: verilator_drivers.hpp
test/payloads/: linker_script.cfg  test_adc_abs.s  test_adc_imm.s  test_adc_with_carry.s  test_and_abs.s  test_and_imm.s  test_clc.s  test_cmp_abs.s  test_cmp_imm.s  test_eor_abs.s  test_eor_imm.s  test_jmp_abs.s  test_lda_abs.s  test_lda_idx.s  test_lda_imm.s  test_lda_zp.s  test_lda_zpx.s  test_ldx_imm.s  test_ldx_zp.s  test_ldy_imm.s  test_ldy_zp.s  test_nop.s  test_ora_abs.s  test_ora_imm.s  test_sbc_abs.s  test_sbc_imm.s  test_sec.s  test_sta_zp.s  test_tax.s  test_tay.s  test_tsx.s  test_txa.s  test_txs.s  test_tya.s
